Almost complete association

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+    <h1>My First Heading</h1>
 
-<p>My first paragraph.</p>
+    <a href="/pages/association.html" target="_self">Association</a>
+
+    <p>About Us</p>
 
 </body>
 </html>
