--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,136 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.theme.default.min.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/mystyle.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <link rel="stylesheet" href="/assets/css/home.css">
+
+  <title>Homepage</title>
+</head>
+
+
 <body>
 
-    <h1>My First Heading</h1>
 
-    <a href="/pages/association.html" target="_self">Association</a>
 
-    <p>About Us</p>
+  <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
+
+      <a class="navbar-brand" href="#">
+        <img src="/assets/img/logov2.png" width="35" height="35" class="d-inline-block align-top" alt="" loading="lazy">
+        <span class="text-uppercase font-weight-bold">Eco Vibes</span>
+      </a>
+   
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>  
+  
+        <li class="nav-item">
+          <a class="nav-link active" href="#">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contacts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Donate</a>
+        </li>    
+      </ul>
+    </div> 
+  </nav>
+
+  <div class="intro">
+<div class="first_text">
+  <strong>CLEAN CITY, GREEN CITY</strong>
+</div>
+    
+      <svg class = "separetor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+        <polygon fill="white" points="0,100 100,0 100,100"/>
+      </svg>
+    </div>
+  </div>
+
+  <footer class="site-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <h6>Eco Vibes SA</h6>
+          <p class="text-justify">Eco Vibes SA, società fondata nel 1988 con sedi a Locarno e Lugano, è attiva nei campi delle consulenze ambientali e naturalistiche, dell’ingegneria forestale come pure della fisica ed energetica della costruzione.</p>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Contatti sede Legale</h6>
+          <ul class="footer-links">
+            <p>Via Rovedo 16 / CP464<br>
+                CH-6604 Locarno<br>
+                Tel. +41 91 290 12 00<br>
+            <a href="mailto:info@ecocontrol.ch">info@ecocontrol.ch</a></p>
+          </ul>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+          <h6>Quick Links</h6>
+          <ul class="footer-links">
+            <li><a href="http://scanfcode.com/about/">About Us</a></li>
+            <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
+            <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Service</a></li>
+            <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+            <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
+            <li><a href="http://scanfcode.com/about/">Contacts</a></li>
+            <li><a href="http://scanfcode.com/contact/">Donate</a></li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-sm-6 col-xs-12">
+          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
+       <a href="#">Bianco-Consonni</a>.
+          </p>
+        </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <ul class="social-icons">
+            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+          </ul>
+        </div>
+      </div>
+    </div>
+</footer>
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="../assets/vendors/jquery.min.js"></script>
 
 </body>
 </html>
