--- a/public/pages/association.html
+++ b/public/pages/association.html
@@ -24,9 +24,12 @@
 </head>
 <body>
 
-<header>
-        <img src="../assets/img/greencity.png">
-</header>
+   <header>
+    <div class="header"></div>
+   </header>
+        <!-- header ends here -->
+          <!-- menu-wrap ends here-->
+    
 
 <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand" href="../index.html">
