--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link" href="#">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacts</a>
+            <a class="nav-link" href="/pages/contact.html">Contacts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Donate</a>
@@ -99,12 +99,12 @@
         <div class="col-xs-6 col-md-3">
           <h6>Quick Links</h6>
           <ul class="footer-links">
-            <li><a href="http://scanfcode.com/about/">About Us</a></li>
+            <li><a href="/pages/association.html">About Us</a></li>
             <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
             <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
-            <li><a href="http://scanfcode.com/about/">Contacts</a></li>
+            <li><a href="/pages/contact.html">Contacts</a></li>
             <li><a href="http://scanfcode.com/contact/">Donate</a></li>
           </ul>
         </div>
