--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Home</a>
+          <a class="nav-link active" href="../index.html">Home</a>
         </li>  
   
         <li class="nav-item">
-          <a class="nav-link active" href="#">About Us</a>
+          <a class="nav-link" href="#">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Team</a>
@@ -61,16 +61,69 @@
     </div> 
   </nav>
 
-  <div class="intro">
-<div class="first_text">
-  <strong>CLEAN CITY, GREEN CITY</strong>
-</div>
+<div class="intro">
+  <div class="first_text">
+    <strong class="slogan">CLEAN CITY, GREEN CITY<br></strong>
+    <strong class="baseline">Voluntary association <br>Requalification Urban soil<br>Cleaning the Cities <br>ECO Vibes, since 2010</strong>
+  </div>
     
       <svg class = "separetor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
         <polygon fill="white" points="0,100 100,0 100,100"/>
       </svg>
+</div>
+
+
+
+<div class="services-container">
+  <h3 class="service-title">SERVICES</h2>
+
+  <div class="services">
+    
+    <div class="service" id="service1"> 
+      <img src="/assets/img/servizio1rid.jpg" class="img-fluid" alt="serviceImg">
+      <div class="service-info">
+        <p class="service-name">Cleaning City</p>
+        <p class="service-descrpition">We take care of collecting and recycling the garbage and waste that degrade our cities</p>
+        <button type="button" class="btn btn-dark">Learn More</button>
+      </div>
     </div>
+
+    <div class="service" id="service2"> 
+      <img src="/assets/img/2.jpg" class="img-fluid" alt="serviceImg">
+      <div class="service-info">
+        <p class="service-name">Cleaning City</p>
+        <p class="service-descrpition">We take care of collecting and recycling the garbage and waste that degrade our cities</p>
+        <button type="button" class="btn btn-dark">Learn More</button>
+      </div>
+    </div>
+
+    <div class="service" id="service4"> 
+      <img src="/assets/img/servizio1rid.jpg" class="img-fluid" alt="serviceImg">
+      <div class="service-info">
+        <p class="service-name">Cleaning City</p>
+        <p class="service-descrpition">We take care of collecting and recycling the garbage and waste that degrade our cities</p>
+        <button type="button" class="btn btn-dark">Learn More</button>
+      </div>
+    </div>
+
+
+    <div class="service" id="service3"> 
+      <img src="/assets/img/servizio1rid.jpg" class="img-fluid" alt="serviceImg">
+      <div class="service-info">
+        <p class="service-name">Cleaning City</p>
+        <p class="service-descrpition">We take care of collecting and recycling the garbage and waste that degrade our cities</p>
+        <button type="button" class="btn btn-dark">Learn More</button>
+      </div>
+    </div>
+
   </div>
+  <svg class = "separetor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <polygon fill="blue" points="0,100 100,0 100,100"/>
+  </svg>
+</div>
+
+
+
 
   <footer class="site-footer">
     <div class="container">
