--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+ 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" type="text/css" href="../assets/css/mystyle.css">
@@ -18,8 +20,6 @@
 
 
 <body>
-
-
 
   <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
 
@@ -38,7 +38,7 @@
         </li>  
   
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="/pages/association.html">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Team</a>
@@ -53,7 +53,7 @@
           <a class="nav-link" href="#">Events</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacts</a>
+          <a class="nav-link" href="/pages/contact.html">Contacts</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Donate</a>
@@ -62,7 +62,7 @@
     </div> 
   </nav>
 
-<div class="intro">
+<div class="col-lg-12" id='intro'>
   <div class="first_text">
     <strong class="slogan">CLEAN CITY, GREEN CITY<br></strong>
     <strong class="baseline">Voluntary association <br>Requalification Urban soil<br>Cleaning the Cities <br>ECO Vibes, since 2010</strong>
