--- a/other/backend/main.html
+++ b/other/backend/main.html
@@ -60,12 +60,12 @@ address</a>.</li>
 API can be found at <a href="https://hypproject1920.herokuapp.com/backend/spec.yaml">this
 address</a>.</li>
 <li>Deliverable D3: the SwaggerUI page of the same API is available at
-<a href="https://hypproject1920.herokuapp.com/docs">this
+<a href="https://hypproject1920.herokuapp.com/backend/swaggerui">this
 address</a>.</li>
 <li>Deliverable D4: the source code of D0 is available as a zip file at
 <a href="https://hypproject1920.herokuapp.com/backend/app.zip">this address</a>.</li>
 <li>Deliverable D5: the address of the online source control repository is
-available <a href="https://github.com/malta895/hypermedia-project/">this
+available <a href="https://github.com/Konsov/Hypermedia-Project-/">this
 address</a>.
 We hereby declare that this
 is a private repository and, upon request, we will give access to the
