--- a/other/backend/main.html
+++ b/other/backend/main.html
@@ -63,7 +63,7 @@ address</a>.</li>
 <a href="https://hypproject1920.herokuapp.com/backend/swaggerui">this
 address</a>.</li>
 <li>Deliverable D4: the source code of D0 is available as a zip file at
-<a href="https://hypproject1920.herokuapp.com/backend/app.zip">this address</a>.</li>
+<a href="localhost:5000/backend/app.zip">this address</a>.</li>
 <li>Deliverable D5: the address of the online source control repository is
 available <a href="https://github.com/Konsov/Hypermedia-Project-/">this
 address</a>.
