--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -51,7 +51,7 @@
         <a class="nav-link" href="#">Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
+        <a class="nav-link" href="services.html">Services</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Projects</a>
@@ -63,16 +63,16 @@
         <a class="nav-link active" href="#">Contacts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Donate</a>
+        <a class="nav-link" href="donate.html">Donate</a>
       </li>    
     </ul>
   </div>  
 </nav>
 
 <header>
-        <div class="header">
-            <p style="font-size: 3vw; font-weight:bold;color: white; position: absolute; margin-top: 28vw; text-transform: uppercase; left:37vw">Get in touch</p>
-            <p style="font-size: 2vw; color: white; position: absolute; margin-top: 32vw; align-self: center;left:17vw">Want to find out more about our service or work with us? Let's talk.</p>   
+        <div class="header_contact">
+            <p style="font-size: 3vw; font-weight:bold;color: white; position: absolute; margin-top: 10vw; text-transform: uppercase; left:37vw">Get in touch</p>
+            <p style="font-size: 2vw; color: white; position: absolute; margin-top: 14vw; align-self: center;left:17vw">Want to find out more about our service or work with us? Let's talk.</p>   
         </div>    
 </header>
 
@@ -248,11 +248,11 @@
           <ul class="footer-links">
             <li><a href="association.html">About Us</a></li>
             <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
-            <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Service</a></li>
+            <li><a href="services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
-            <li><a href="http://scanfcode.com/about/">Contacts</a></li>
-            <li><a href="http://scanfcode.com/contact/">Donate</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="donate.html">Donate</a></li>
           </ul>
         </div>
       </div>
