--- a/other/backend/main.html
+++ b/other/backend/main.html
@@ -122,7 +122,7 @@ All the URIs follow the same naming convention (for example, all requests regard
 <p><strong>Describe with an ER diagram the model used in the data layer of your web
 application. How these map to the OpenAPI data model?</strong></p>
 
-<p><img src="ER.png" title="ER Diagram" alt="ER Diagram" /></p>
+<p><img src="ER.png" title="ER Diagram" alt="ER Diagram" style="width: 100%; height: 10%;"/></p>
 
 <p>All of the entities in the diagram above are mapped to their counterparts in the API specification. Of course in the database we added relation tables for the 1-N and N-N relations.</p>
 
