--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
           <a class="nav-link" href="/pages/contact.html">Contacts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Donate</a>
+          <a class="nav-link" href="/pages/donate.html">Donate</a>
         </li>    
       </ul>
     </div> 
@@ -331,7 +331,7 @@
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
             <li><a href="/pages/contact.html">Contacts</a></li>
-            <li><a href="http://scanfcode.com/contact/">Donate</a></li>
+            <li><a href="/pages/donate.html">Donate</a></li>
           </ul>
         </div>
       </div>
