--- a/public/pages/singlePerson.html
+++ b/public/pages/singlePerson.html
@@ -52,7 +52,7 @@
         <a class="nav-link" href="#">Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
+        <a class="nav-link" href="services.html">Services</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Projects</a>
@@ -64,7 +64,7 @@
         <a class="nav-link active" href="#">Contacts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Donate</a>
+        <a class="nav-link" href="donate.html">Donate</a>
       </li>    
     </ul>
   </div>  
@@ -77,7 +77,7 @@
 </header>
 
 <div class="col-lg-12">
-    
+  <div class="row">    
     <div class="col-lg-4"></div>
     <h3 id="person_name"></h3>
     <div class="col-lg-8" >
@@ -197,11 +197,11 @@
           <ul class="footer-links">
             <li><a href="association.html">About Us</a></li>
             <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
-            <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Service</a></li>
+            <li><a href="services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
-            <li><a href="http://scanfcode.com/about/">Contacts</a></li>
-            <li><a href="http://scanfcode.com/contact/">Donate</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="donate.html">Donate</a></li>
           </ul>
         </div>
       </div>
