--- a/public/pages/association.html
+++ b/public/pages/association.html
@@ -70,7 +70,7 @@
 </nav>
 <header>
     <div class="header">
-      <p style="font-size: 3vw; font-weight:bold;color: white; position: absolute; margin-top: 10vw; text-transform: uppercase; left:37vw">Association</p>    
+      <p id="p1">Association</p>    
     </div>
 </header>
 
