--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -71,8 +71,8 @@
 
 <header>
         <div class="header_contact">
-            <p style="font-size: 3vw; font-weight:bold;color: white; position: absolute; margin-top: 10vw; text-transform: uppercase; left:37vw">Get in touch</p>
-            <p style="font-size: 2vw; color: white; position: absolute; margin-top: 14vw; align-self: center;left:17vw">Want to find out more about our service or work with us? Let's talk.</p>   
+            <p id="p1">Get in touch</p>
+            <p id="p2">Want to find out more about our service or work with us? Let's talk.</p>   
         </div>    
 </header>
 
