--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -69,8 +69,8 @@
   </div>  
 </nav>
 <header>
-    <div class="header">
-      <p style="font-size: 3vw; font-weight:bold;color: white; position: absolute; margin-top: 10vw; text-transform: uppercase; left:37vw">Donate now</p>
+    <div class="header_donate">
+      <p id="p1">Donate now</p>
     </div>
 </header>
 
