--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -66,8 +66,8 @@
 </nav>
 <header>
     <div class="header_services">
-      <p style="font-size: 3vw; font-weight:bold;color: white; position: absolute; margin-top: 28vw; text-transform: uppercase; left:37vw">Our services</p>
-      <p style="font-size: 2vw; color: white; position: absolute; margin-top: 32vw; align-self: center;left:30vw">Find out what our association have to offer.</p>   
+      <p id="p1">Our services</p>
+      <p id="p2">Find out what our association have to offer.</p>   
     </div>
 </header>
 
