--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
           <a class="nav-link" href="#">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/allServices.html">Services</a>
+          <a class="nav-link" href="/pages/services.html">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Projects</a>
@@ -96,7 +96,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Cleaning City</h5>
                   <p class="card-text">We keep our cities clean by collecting and recycling the garbage and waste that degrades the streets and urban spaces</p>
-                  <a href="/pages/service.html" class="btn btn-dark">Read More</a>
+                  <a href="/pages/service.html?id=1" class="btn btn-dark">Read More</a>
                 </div>
               </div>
             </div>
@@ -111,7 +111,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Urban Requalification</h5>
                   <p class="card-text">Many areas of our cities are in a state of decay and left in disarray, one of our goals is to help restore these areas to their due beauty</p>
-                  <button type="button" class="btn btn-dark">Read More</button>
+                  <a href="/pages/service.html?id=2" class="btn btn-dark">Read More</a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Protection of Natural Research</h5>
                   <p class="card-text">Nature cannot defend itself. We protect and take care of the natural resources of our cities, we keep our forests and parks clean</p>
-                  <button type="button" class="btn btn-dark">Read More</button>
+                  <a href="/pages/service.html?id=3" class="btn btn-dark">Read More</a>
                 </div>
               </div>
             </div>
@@ -145,7 +145,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Build Green Area</h5>
                   <p class="card-text">Through fundraising and collaborations with municipalities we create green areas in our cities for a greener city, a better city</p>
-                  <button type="button" class="btn btn-dark">Read More</button>
+                  <a href="/pages/service.html?id=4" class="btn btn-dark">Read More</a>
                 </div>
               </div>
             </div>
