--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           <a class="nav-link" href="#">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="/pages/services.html">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Projects</a>
@@ -66,7 +66,7 @@
 
 <div class='intro'>
   <div class="first_text">
-    <strong class="slogan">CLEAN CITY, GREEN CITY<br></strong>
+    <strong class="slogan">CLEAN CITY - GREEN CITY<br></strong>
     <strong class="baseline">Voluntary association <br>Requalification Urban soil<br>Cleaning the Cities <br>ECO Vibes, since 2010</strong>
   </div>
     
@@ -327,7 +327,7 @@
           <ul class="footer-links">
             <li><a href="/pages/association.html">About Us</a></li>
             <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
-            <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Service</a></li>
+            <li><a href="/pages/services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
             <li><a href="/pages/contact.html">Contacts</a></li>
