Finish service page

--- a/public/pages/service.html
+++ b/public/pages/service.html
@@ -143,8 +143,8 @@
 
         <!------------------------------------------------------- EVENT RELATED -------------------------------------------------------------------->
 
-        <div class="container-events">
-            <p class="project-title">RELATED EVENTS</p>
+         <div class="container-events">
+           <!--<p class="project-title">RELATED EVENTS</p>
             <div class="events">
                 <div id="carouselExampleCaptions2" class="carousel slide" data-ride="carousel" style="height: 500px">
                     <ol class="carousel-indicators">
@@ -197,8 +197,9 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
+    
     </div>
 
 
