add teams + new features

--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -37,29 +37,45 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../index.html">Home</a>
+        <div class="box-e">
+          <a class="custom-underline nav-link " href="../index.html">Home</a>
+        </div>
       </li>  
 
       <li class="nav-item">
-        <a class="nav-link " href="association.html">About Us</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="association.html">About Us</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Team</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="team.html">Team</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Services</a>
+        <div class="box-b"> 
+          <a class="custom-underline nav-link active" href="services.html">Services</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Projects</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Events</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Events</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contacts</a>
+        <div class="box-e">
+          <a class="custom-underline nav-link" href="contact.html">Contacts</a>
+        </div>  
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="donate.html">Donate</a>
+        <div class="box-e">            
+          <a class="custom-underline nav-link" href="donate.html">Donate</a>
+        </div>
       </li>    
     </ul>
   </div>  
@@ -71,7 +87,7 @@
     </div>
 </header>
 
-<div id="service_array">
+<div id="service_array" style="background:rgba(170, 170, 170, 0.1)">
 </div>
 
 
@@ -168,7 +184,7 @@
           <h6>Quick Links</h6>
           <ul class="footer-links">
             <li><a href="association.html">About Us</a></li>
-            <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
+            <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
