--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 
 
 <body>
+  
 
  <!-------------------------------------------------------NAVBAR-------------------------------------------------------------------->
   <nav class="navbar sticky-top navbar-expand-sm bg-dark navbar-dark">
@@ -39,29 +40,45 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="../index.html">Home</a>
+          <div class="box-b">
+            <a class="custom-underline nav-link active" href="index.html">Home</a>
+          </div>
         </li>  
   
         <li class="nav-item">
-          <a class="nav-link" href="/pages/association.html">About Us</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="./pages/association.html">About Us</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="./pages/team.html">Team</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/services.html">Services</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="./pages/services.html">Services</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="#">Projects</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="#">Events</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/contact.html">Contacts</a>
+          <div class="box-e">
+            <a class="custom-underline nav-link" href="./pages/contact.html">Contacts</a>
+          </div>  
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/donate.html">Donate</a>
+          <div class="box-e">            
+            <a class="custom-underline nav-link" href="./pages/donate.html">Donate</a>
+          </div>
         </li>    
       </ul>
     </div> 
@@ -330,13 +347,13 @@
         <div class="col-xs-6 col-md-3">
           <h6>Quick Links</h6>
           <ul class="footer-links">
-            <li><a href="/pages/association.html">About Us</a></li>
-            <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
-            <li><a href="/pages/services.html">Service</a></li>
+            <li><a href="./pages/association.html">About Us</a></li>
+            <li><a href="./pages/team.html" aria-current="page">Team</a></li>
+            <li><a href="./pages/services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
-            <li><a href="/pages/contact.html">Contacts</a></li>
-            <li><a href="/pages/donate.html">Donate</a></li>
+            <li><a href="./pages/contact.html">Contacts</a></li>
+            <li><a href="./pages/donate.html" class="custom-underline">Donate</a></li>
           </ul>
         </div>
       </div>
