--- a/public/pages/association.html
+++ b/public/pages/association.html
@@ -42,29 +42,45 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../index.html">Home</a>
+        <div class="box-e">
+          <a class="custom-underline nav-link " href="../index.html">Home</a>
+        </div>
       </li>  
 
       <li class="nav-item">
-        <a class="nav-link active" href="#">About Us</a>
+        <div class="box-b"> 
+          <a class="custom-underline nav-link active" href="association.html">About Us</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Team</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="team.html">Team</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="services.html">Services</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="services.html">Services</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Projects</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Events</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Events</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contacts</a>
+        <div class="box-e">
+          <a class="custom-underline nav-link" href="contact.html">Contacts</a>
+        </div>  
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="donate.html">Donate</a>
+        <div class="box-e">            
+          <a class="custom-underline nav-link" href="donate.html">Donate</a>
+        </div>
       </li>    
     </ul>
   </div>  
@@ -75,9 +91,9 @@
     </div>
 </header>
 
-<div class="col-lg-12", style="margin-top: 30px;">
+<div class="col-lg-12", style="background: rgba(170, 170, 170, 0.1);">
   <div class="row">
-    <div class="col-lg-2">
+    <div class="col-lg-2" style="margin-top: 30px;">
       <h3>About us</h3>
       <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <a class="nav-link active" id="v-pills-who-we-are-tab" data-toggle="pill" href="#v-pills-who-we-are" role="tab" aria-controls="v-pills-who-we-are" aria-selected="true">Who we are</a>
@@ -85,7 +101,7 @@
             <a class="nav-link" id="v-pills-where-we-are-tab" data-toggle="pill" href="#v-pills-where-we-are" role="tab" aria-controls="v-pills-where-we-are" aria-selected="false">Where we are</a>
       </div>
     </div>
-    <div class="col-lg-10">
+    <div class="col-lg-10" style="margin-top: 30px;">
         <div class="row">          
             <div class= "col-lg-8">
                 <div class="tab-content" id="v-pills-tabContent">
@@ -196,8 +212,8 @@
         <div class="col-xs-6 col-md-3">
           <h6>Quick Links</h6>
           <ul class="footer-links">
-            <li><a href="http://scanfcode.com/about/">About Us</a></li>
-            <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
+            <li><a href="association.html">About Us</a></li>
+            <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
