--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -41,29 +41,45 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../index.html">Home</a>
+        <div class="box-e">
+          <a class="custom-underline nav-link " href="../index.html">Home</a>
+        </div>
       </li>  
 
       <li class="nav-item">
-        <a class="nav-link " href="association.html">About Us</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="association.html">About Us</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Team</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="team.html">Team</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="services.html">Services</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="services.html">Services</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Projects</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Events</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Events</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Contacts</a>
+        <div class="box-b">
+          <a class="custom-underline nav-link active" href="contact.html">Contacts</a>
+        </div>  
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="donate.html">Donate</a>
+        <div class="box-e">            
+          <a class="custom-underline nav-link" href="donate.html">Donate</a>
+        </div>
       </li>    
     </ul>
   </div>  
@@ -76,7 +92,7 @@
         </div>    
 </header>
 
-<div class="col-lg-12">
+<div class="col-lg-12" style="background: rgba(170, 170, 170, 0.1);">
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-5">
@@ -247,7 +263,7 @@
           <h6>Quick Links</h6>
           <ul class="footer-links">
             <li><a href="association.html">About Us</a></li>
-            <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
+            <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
