--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -41,29 +41,45 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="../index.html">Home</a>
+        <div class="box-e">
+          <a class="custom-underline nav-link " href="../index.html">Home</a>
+        </div>
       </li>  
 
       <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="association.html">About Us</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Team</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link " href="team.html">Team</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="services.html">Services</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="services.html">Services</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Projects</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Events</a>
+        <div class="box-e"> 
+          <a class="custom-underline nav-link" href="#">Events</a>
+        </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contacts</a>
+        <div class="box-e">
+          <a class="custom-underline nav-link" href="contact.html">Contacts</a>
+        </div>  
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Donate</a>
+        <div class="box-b">            
+          <a class="custom-underline nav-link active" href="donate.html">Donate</a>
+        </div>
       </li>    
     </ul>
   </div>  
@@ -74,14 +90,14 @@
     </div>
 </header>
 
-<div class="col-lg-12" style="margin-top: 2vw;">
+<div class="col-lg-12" style="background: rgba(170, 170, 170, 0.1);">
     <div class="row">
         <div class="col-lg-2"></div>
-        <div class="col-lg-5">
+        <div class="col-lg-5" style="margin-top: 2vw;">
             <p style="font-size: 36px; font-weight: bold;">MAKE A DONATION</p><br>
             <p style="font-size: 25px; font-weight: 600;">Help us to make our region a better place.</p><br>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3" style="margin-top: 2vw;">
             <div class="card" style="box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1)">
                 <form>
                     <div class="card-header">
@@ -124,27 +140,6 @@
         </div>
         <div class="col-lg-2"></div>
     </div>
-</div>
-
-<div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Thank you for your donation!</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Your donation will help our association to help other people!
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
 </div>
 
 
@@ -239,13 +234,13 @@
         <div class="col-xs-6 col-md-3">
           <h6>Quick Links</h6>
           <ul class="footer-links">
-            <li><a href="http://scanfcode.com/about/">About Us</a></li>
-            <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
+            <li><a href="association.html">About Us</a></li>
+            <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
             <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
             <li><a href="contact.html">Contacts</a></li>
-            <li><a href="http://scanfcode.com/contact/">Donate</a></li>
+            <li><a href="donate.html">Donate</a></li>
           </ul>
         </div>
       </div>
