--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
         </li>
         <li class="nav-item">
           <div class="box-e"> 
-            <a class="custom-underline nav-link" href="#">Projects</a>
+            <a class="custom-underline nav-link" href="./pages/allprojects.html">Projects</a>
           </div>
         </li>
         <li class="nav-item">
