--- a/public/pages/allprojects.html
+++ b/public/pages/allprojects.html
@@ -42,7 +42,7 @@
           <a class="nav-link " href="association.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+          <a class="nav-link" href="team.html">Team</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="services.html">Services</a>
