--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -42,13 +42,13 @@
           <a class="nav-link " href="association.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
+          <a class="nav-link" href="team.html">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Services</a>
+          <a class="nav-link active" href="services.html">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="allprojects.html">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Events</a>
