--- a/public/pages/singlePerson.html
+++ b/public/pages/singlePerson.html
@@ -64,7 +64,7 @@
       </li>
       <li class="nav-item">
         <div class="box-e"> 
-          <a class="custom-underline nav-link" href="#">Projects</a>
+          <a class="custom-underline nav-link" href="allprojects.html">Projects</a>
         </div>
       </li>
       <li class="nav-item">
