--- a/public/pages/team.html
+++ b/public/pages/team.html
@@ -56,7 +56,7 @@
                 </li>
                 <li class="nav-item">
                   <div class="box-e"> 
-                    <a class="custom-underline nav-link" href="#">Projects</a>
+                    <a class="custom-underline nav-link" href="allprojects.html">Projects</a>
                   </div>
                 </li>
                 <li class="nav-item">
