--- a/public/pages/singlePerson.html
+++ b/public/pages/singlePerson.html
@@ -87,36 +87,48 @@
 </nav>
 
 <header>
-        <div class="header">
-            <p style="font-size: 3vw; font-weight:bold;color: white; position: absolute; margin-top: 28vw; text-transform: uppercase; left:39vw">Our Team</p>  
-        </div>    
+  <div class="header">
+    <p id="p1">Our Team</p>  
+  </div>    
 </header>
 
-<div class="col-lg-12">
-  <div class="row">    
-    <div class="col-lg-4"></div>
-    <h3 id="person_name"></h3>
-    <div class="col-lg-8" >
-        <div class="row">
-            <div class="product-carousel-wrapper">
-                <div id="product-carousel">
-                </div>    
-            </div>
-            <div class="column" id="person_data">
-                <h5>Age</h5>
-                <p id="person_age"></p>
-                <h5>Role</h5>
-                <p id="person_role"></p>
-                <h5>Profession</h5>
-                <p id="person_profession"></p>
-                <h5>Service</h5>
-                <p id="person_service"></p>
-                <h5>About me</h5>
-                <p id="person_description"></p>
-            </div>  
+<div style="background: rgba(170, 170, 170, 0.1);">
+  <div class="col-lg-12">
+    <div class="row">    
+      <div class="col-lg-4"></div>
+      <h3 id="person_name"></h3>
+    </div>
+  </div>      
+  <div class="col-lg-12">
+    <div class="row">
+      <div class="col-lg-3">                
+        <div class="product-carousel-wrapper">
+          <div id="product-carousel">
+          </div>    
         </div>
-    </div>        
+      </div>
+      <div class="col-lg-6" id="info_person">
+        <div class="column" id="person_data">
+          <h5>Age</h5>
+          <p id="person_age"></p>
+          <h5>Role</h5>
+          <p id="person_role"></p>
+          <h5>Profession</h5>
+          <p id="person_profession"></p>
+          <h5>Service</h5>
+          <p id="person_service"></p>
+          <h5>About me</h5>
+          <p id="person_description"></p>
+        </div>
+      </div>
+    </div> 
+  </div>
+
+  <div class="container-events">
+  </div>
+  
 </div>
+
 
 <!------------------------------------------------------- PARTNER SECTION -------------------------------------------------------------------->
     
