--- a/public/pages/team.html
+++ b/public/pages/team.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.theme.default.min.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/mystyle.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/service.css">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -15,6 +14,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="../assets/vendors/jquery.min.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="../assets/css/mystyle.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/service.css">
     <script src="../assets/owlcarousel/owl.carousel.js"></script>
     <script src="../assets/js/team.js"></script>
 </head>
@@ -87,7 +89,7 @@
 <!-----------------------------------------------------------TEAM -------------------------------------------------------------------->
 
 
-<div class="col-md-12", style="background: rgba(170, 170, 170, 0.1);">
+<div class="col-md-12" style="background: rgba(170, 170, 170, 0.1);">
     <div class="row">
         <div class="col-lg-1"></div>
         <div class="col-lg-7" style="margin-top: 30px;">
