--- a/public/index.html
+++ b/public/index.html
@@ -370,7 +370,7 @@
             <li><a href="./pages/association.html">About Us</a></li>
             <li><a href="./pages/team.html" aria-current="page">Team</a></li>
             <li><a href="./pages/services.html">Service</a></li>
-            <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+            <li><a href="./pages/allprojects.html">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
             <li><a href="./pages/contact.html">Contacts</a></li>
             <li><a href="./pages/donate.html" class="custom-underline">Donate</a></li>
