--- a/public/pages/404.html
+++ b/public/pages/404.html
@@ -63,7 +63,7 @@
       </li>
       <li class="nav-item">
         <div class="box-e"> 
-          <a class="custom-underline nav-link" href="#">Projects</a>
+          <a class="custom-underline nav-link" href="allprojects.html">Projects</a>
         </div>
       </li>
       <li class="nav-item">
@@ -199,7 +199,7 @@
             <li><a href="association.html">About Us</a></li>
             <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
-            <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+            <li><a href="allprojects.html">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donate</a></li>
