--- a/public/pages/allprojects.html
+++ b/public/pages/allprojects.html
@@ -35,29 +35,45 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="../index.html">Home</a>
+          <div class="box-e">
+            <a class="custom-underline nav-link " href="../index.html">Home</a>
+          </div>
         </li>  
-
+  
         <li class="nav-item">
-          <a class="nav-link " href="association.html">About Us</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="association.html">About Us</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="team.html">Team</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="team.html">Team</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="services.html">Services</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="services.html">Services</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Projects</a>
+          <div class="box-b"> 
+            <a class="custom-underline nav-link active" href="allprojects.html">Projects</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Events</a>
+          <div class="box-e"> 
+            <a class="custom-underline nav-link" href="#">Events</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contacts</a>
+          <div class="box-e">
+            <a class="custom-underline nav-link" href="contact.html">Contacts</a>
+          </div>  
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="donate.html">Donate</a>
+          <div class="box-e">            
+            <a class="custom-underline nav-link" href="donate.html">Donate</a>
+          </div>
         </li>    
       </ul>
     </div>  
@@ -72,13 +88,32 @@
 
   <!-------------------------------------------------------IMAGE INTRO-------------------------------------------------------------------->
   
-    <div id="service-container" class="container">
+  <div style="background: rgba(170, 170, 170, 0.1);">
+    
+    <div id="service-container" class="container" >
     </div>
+  </div>
+    <div style="background: rgba(170, 170, 170, 0.1); padding-bottom: 1vw;">
+      <nav aria-label="page navigation project" >
+        <ul class="pagination justify-content-center">
+          <li id="prev" class="page-item prev-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+          </li>
+          <li class="page-item page-item-number first-item active"><a class="page-link" href="#">1</a></li>
+          <li class="page-item page-item-number"><a class="page-link" href="#">2</a></li>
+          <li class="page-item page-item-number last-item"><a class="page-link" href="#">3</a></li>
+          <li id="next" class="page-item next-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    
 
-
+    <div id="scrolltop" class="hidden-xs"><i class="fa fa-angle-up"></i></div>  
   <!-------------------------------------------------------PARTNER SECTION-------------------------------------------------------------------->
 
-    <div id="partner-section" class="col-lg-12" style="background-color: white;margin-top: 5vw;">
+    <div id="partner-section" class="col-lg-12" style="background-color:  white;">
     <section id="demos">
         <div class="row justify-content-md-center">
             <div  class="col-lg-6">
@@ -171,9 +206,9 @@
             <h6>Quick Links</h6>
             <ul class="footer-links">
               <li><a href="association.html">About Us</a></li>
-              <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
+              <li><a href="team.html" aria-current="page">Team</a></li>
               <li><a href="services.html">Service</a></li>
-              <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+              <li><a href="allprojects.html">Projects</a></li>
               <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
               <li><a href="contact.html">Contacts</a></li>
               <li><a href="donate.html">Donate</a></li>
