--- a/public/pages/association.html
+++ b/public/pages/association.html
@@ -91,7 +91,7 @@
     </div>
 </header>
 
-<div class="col-lg-12", style="background: rgba(170, 170, 170, 0.1);">
+<div class="col-lg-12", style="background: rgba(170, 170, 170, 0.1); padding-bottom: 2vw;">
   <div class="row">
     <div class="col-lg-2" style="margin-top: 30px;">
       <h3>About us</h3>
@@ -121,7 +121,7 @@
 
 <!------------------------------------------------------- PARTNER SECTION -------------------------------------------------------------------->
     
-<div class="col-lg-12" style="background-color: white;margin-top: 2vw;">
+<div class="col-lg-12" style="background-color: white;">
   <section id="demos">
       <div class="row justify-content-md-center">
           <div  class="col-lg-6">
@@ -215,7 +215,7 @@
             <li><a href="association.html">About Us</a></li>
             <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
-            <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+            <li><a href="allprojects.html">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donate</a></li>
