--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -57,7 +57,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <div class="box-e"> 
+        <div class="box-e">   
           <a class="custom-underline nav-link" href="services.html">Services</a>
         </div>
       </li>
@@ -90,7 +90,7 @@
     </div>
 </header>
 
-<div class="col-lg-12" style="background: rgba(170, 170, 170, 0.1);">
+<div class="col-lg-12" style="background: rgba(170, 170, 170, 0.1); padding-bottom: 2vw;">
     <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-5" style="margin-top: 2vw;">
@@ -143,7 +143,7 @@
 </div>
 
 
-<div class="col-lg-12" style="background-color: white;margin-top: 2vw;">
+<div class="col-lg-12" style="background-color: white;">
     <section id="demos">
         <div class="row">
             <div class="col-lg-3"></div>
@@ -237,7 +237,7 @@
             <li><a href="association.html">About Us</a></li>
             <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
-            <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+            <li><a href="allprojects.html">Projects</a></li>
             <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donate</a></li>
