--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -57,7 +57,7 @@
         </li>
         <li class="nav-item">
           <div class="box-e"> 
-            <a class="custom-underline nav-link" href="#">Projects</a>
+            <a class="custom-underline nav-link" href="allprojects.html">Projects</a>
           </div>
         </li>
         <li class="nav-item">
@@ -87,7 +87,7 @@
   </div>
 
   <!-------------------------------------------------------IMAGE INTRO-------------------------------------------------------------------->
-  <div style="background: rgba(170, 170, 170, 0.1);">
+  <div style="background: rgba(170, 170, 170, 0.1); padding-bottom: 1vw;">
     
     <div id="service-container" class="container" >
     </div>
@@ -96,7 +96,7 @@
 
   <!-------------------------------------------------------PARTNER SECTION-------------------------------------------------------------------->
 
-  <div id="partner-section" class="col-lg-12" style="background-color: white;margin-top: 5vw;">
+  <div id="partner-section" class="col-lg-12" style="background-color: white;">
     <section id="demos">
         <div class="row justify-content-md-center">
             <div  class="col-lg-6">
@@ -191,7 +191,7 @@
               <li><a href="association.html">About Us</a></li>
               <li><a href="http://scanfcode.com/contact/" aria-current="page">Team</a></li>
               <li><a href="services.html">Service</a></li>
-              <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+              <li><a href="allprojects.html">Projects</a></li>
               <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
               <li><a href="contact.html">Contacts</a></li>
               <li><a href="donate.html">Donate</a></li>
