--- a/public/pages/team.html
+++ b/public/pages/team.html
@@ -89,7 +89,7 @@
 <!-----------------------------------------------------------TEAM -------------------------------------------------------------------->
 
 
-<div class="col-md-12" style="background: rgba(170, 170, 170, 0.1);">
+<div class="col-md-12" style="background: rgba(170, 170, 170, 0.1); padding-bottom: 2vw;">
     <div class="row">
         <div class="col-lg-1"></div>
         <div class="col-lg-7" style="margin-top: 30px;">
@@ -105,7 +105,7 @@
 
 <!------------------------------------------------------- PARTNER SECTION -------------------------------------------------------------------->
     
-    <div id="partner-section" class="col-lg-12" style="background-color: white;margin-top: 5vw;">
+    <div id="partner-section" class="col-lg-12" style="background-color: white;">
         <section id="demos">
             <div class="row justify-content-md-center">
                 <div  class="col-lg-6">
@@ -199,7 +199,7 @@
                 <li><a href="association.html">About Us</a></li>
                 <li><a href="team.html" aria-current="page">Team</a></li>
                 <li><a href="services.html">Service</a></li>
-                <li><a href="http://scanfcode.com/privacy-policy/">Projects</a></li>
+                <li><a href="allprojects.html">Projects</a></li>
                 <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
                 <li><a href="contact.html">Contacts</a></li>
                 <li><a href="donate.html">Donate</a></li>
