--- a/public/pages/event.html
+++ b/public/pages/event.html
@@ -61,7 +61,7 @@
                 </li>
                 <li class="nav-item">
                   <div class="box-e"> 
-                    <a class="custom-underline nav-link" href="#">Events</a>
+                    <a class="custom-underline nav-link" href="allevent.html">Events</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -87,6 +87,9 @@
 
     <div class="container">
         <div class="service-info">
+            
+        </div>
+        <div class="d-flex justify-content-between" id="buttons">            
         </div>
 
         <div class="referance">
