--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         </li>
         <li class="nav-item">
           <div class="box-e"> 
-            <a class="custom-underline nav-link" href="#">Events</a>
+            <a class="custom-underline nav-link" href="./pages/allevent.html">Events</a>
           </div>
         </li>
         <li class="nav-item">
