--- a/public/pages/allevent.html
+++ b/public/pages/allevent.html
@@ -63,8 +63,8 @@
                   </div>
                 </li>
                 <li class="nav-item">
-                  <div class="box-e"> 
-                    <a class="custom-underline nav-link" href="#">Events</a>
+                  <div class="box-b"> 
+                    <a class="custom-underline nav-link active" href="allevent.html">Events</a>
                   </div>
                 </li>
                 <li class="nav-item">
@@ -96,7 +96,10 @@
         <div class="box-c">
             <h3 class="custom-underline" id="service_name"><strong>Choose the month</strong></h3>
         </div>
-        <input name="startDate" id="startDate" class="date-picker" autocomplete="off" />
+        <div class="row" id="startDate">            
+            <input name="startDate"  class="date-picker" autocomplete="off" />
+            <i style="margin-left: 3px; "class="fa fa-calendar fa-2x" aria-hidden="true"></i>
+        </div>
 
         <div id="months_event"></div>
         
