--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -68,7 +68,7 @@
       </li>
       <li class="nav-item">
         <div class="box-e"> 
-          <a class="custom-underline nav-link" href="#">Events</a>
+          <a class="custom-underline nav-link" href="allevent.html">Events</a>
         </div>
       </li>
       <li class="nav-item">
