some css changes

--- a/public/index.html
+++ b/public/index.html
@@ -239,7 +239,7 @@
           <div class="col-md-9">
             <h5 class="card-title" style="color: white;font-size: x-large;">Who we are</h5>
             <p class="card-text" style="color: white; font-size: large;">Our association was born from a group of young people who cared about the well-being and health of their city. Thanks to their commitment and their desire to get involved, they have managed to join a large number of volunteers of all ages with the aim of safeguarding cities from degradation.</p>
-            <button type="button" class="btn btn-light">Team</button>
+            <a href="./pages/team.html" type="button" class="btn btn-light">Team</a>
           </div>
           <div class="col-6 col-md-3">
             <div class="row align-items-center">
