--- a/public/pages/project.html
+++ b/public/pages/project.html
@@ -20,7 +20,7 @@
     <script src="../assets/owlcarousel/owl.carousel.js"></script>
     <script src="../assets/js/project.js"></script>
 </head>
-<body>
+<body style="background: rgba(170, 170, 170, 0.1); padding-bottom: 2vw;">
 
 <!-------------------------------------------------------NAVBAR-------------------------------------------------------------------->
     
@@ -149,7 +149,7 @@
 
 <!------------------------------------------------------- PARTNER SECTION -------------------------------------------------------------------->
     
-    <div id="partner-section" class="col-lg-12" style="background-color: white;margin-top: 5vw;">
+    <div id="partner-section" class="col-lg-12" style="background-color: white;">
         <section id="demos">
             <div class="row justify-content-md-center">
                 <div  class="col-lg-6">
@@ -216,10 +216,6 @@
             </div>
         </section>
     </div>
-
-    <label for="startDate">Date :</label>
-    <input name="startDate" id="startDate" class="date-picker" autocomplete="off" />
-
     <!------------------------------------------------------- FOOTER -------------------------------------------------------------------->
 
     <footer class="site-footer">
@@ -247,7 +243,7 @@
                 <li><a href="team.html" aria-current="page">Team</a></li>
                 <li><a href="services.html">Service</a></li>
                 <li><a href="allprojects.html">Projects</a></li>
-                <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
+                <li><a href="allevent.html">Events</a></li>
                 <li><a href="contact.html">Contacts</a></li>
                 <li><a href="donate.html">Donate</a></li>
             </ul>
