--- a/public/pages/eventmonth.html
+++ b/public/pages/eventmonth.html
@@ -20,7 +20,7 @@
     <script src="../assets/owlcarousel/owl.carousel.js"></script>
     <script src="../assets/js/eventmonth.js"></script>
 </head>
-<body>
+<body style="background: rgba(170, 170, 170, 0.1); padding-bottom: 2vw;">
 
 <!-------------------------------------------------------NAVBAR-------------------------------------------------------------------->
     
@@ -107,7 +107,7 @@
 
 <!------------------------------------------------------- PARTNER SECTION -------------------------------------------------------------------->
     
-    <div id="partner-section" class="col-lg-12" style="background-color: white;margin-top: 5vw;">
+    <div id="partner-section" class="col-lg-12" style="background-color: white;">
         <section id="demos">
             <div class="row justify-content-md-center">
                 <div  class="col-lg-6">
