--- a/public/pages/singlePerson.html
+++ b/public/pages/singlePerson.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.carousel.min.css">
   <link rel="stylesheet" href="../assets/owlcarousel/assets/owl.theme.default.min.css">
   <link rel="stylesheet" type="text/css" href="../assets/css/mystyle.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/service.css">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -23,7 +25,7 @@
   }
   </style>
 </head>
-<body>
+<body style="background: rgba(170, 170, 170, 0.1); padding-bottom: 2vw;">
 
    
         <!-- header ends here -->
@@ -88,10 +90,13 @@
 
 <header>
   <div class="header">
+    <div class="first_text">
+    </div>
   </div>    
 </header>
 
-<div style="background: rgba(170, 170, 170, 0.1); padding-bottom: 2vw;">
+
+<div class="container" >
   <div class="col-lg-12">
     <div class="row">    
       <div class="col-lg-4"></div>
@@ -100,7 +105,7 @@
   </div>      
   <div class="col-lg-12">
     <div class="row">
-      <div class="col-lg-3">                
+      <div class="col-lg-5">                
         <div class="product-carousel-wrapper">
           <div id="product-carousel">
           </div>    
