--- a/public/pages/event.html
+++ b/public/pages/event.html
@@ -89,7 +89,7 @@
         <div class="service-info">
             
         </div>
-        <div class="d-flex justify-content-between" id="buttons">            
+        <div class="d-flex justify-content-between" style="padding: 2vw;"id="buttons">            
         </div>
 
         <div class="referance">
