--- a/public/pages/404.html
+++ b/public/pages/404.html
@@ -200,7 +200,7 @@
             <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
             <li><a href="allprojects.html">Projects</a></li>
-            <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
+            <li><a href="allevent.html">Events</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donate</a></li>
           </ul>
