--- a/public/pages/singlePerson.html
+++ b/public/pages/singlePerson.html
@@ -207,56 +207,56 @@
 <!------------------------------------------------------- FOOTER -------------------------------------------------------------------->
 
 <footer class="site-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-6">
-          <h6>Eco Vibes SA</h6>
-          <p class="text-justify">Eco Vibes SA, società fondata nel 1988 con sedi a Locarno e Lugano, è attiva nei campi delle consulenze ambientali e naturalistiche, dell’ingegneria forestale come pure della fisica ed energetica della costruzione.</p>
-        </div>
-
-        <div class="col-xs-6 col-md-3">
-          <h6>Contatti sede Legale</h6>
-          <ul class="footer-links">
-            <p>Via Rovedo 16 / CP464<br>
-                CH-6604 Locarno<br>
-                Tel. +41 91 290 12 00<br>
-            <a href="mailto:info@ecocontrol.ch">info@ecocontrol.ch</a></p>
-          </ul>
-        </div>
-
-        <div class="col-xs-6 col-md-3">
-          <h6>Quick Links</h6>
-          <ul class="footer-links">
-            <li><a href="association.html">About Us</a></li>
-            <li><a href="team.html" aria-current="page">Team</a></li>
-            <li><a href="services.html">Service</a></li>
-            <li><a href="allprojects.html">Projects</a></li>
-            <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li><a href="donate.html">Donate</a></li>
-          </ul>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>Eco Vibes SA</h6>
+        <p class="text-justify">Eco Vibes was founded by Father Barbieri on 15 April 1965 is active in the field of ambiental and natural consulence, forestal engineering and eneregetic of the construction.</p>
       </div>
-      <hr>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
-       <a href="#">Bianco-Consonni</a>.
-          </p>
-        </div>
 
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
-          </ul>
-        </div>
+      <div class="col-xs-6 col-md-3">
+        <h6>Contatti sede Legale</h6>
+        <ul class="footer-links">
+          <p>Viale Alessandro Carughi, 69<br>
+              Como<br>
+              Tel. +69 91 420 96 00<br>
+          <a href="mailto:info@ecocontrol.ch">info@ecovibes.org</a></p>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="association.html">About Us</a></li>
+          <li><a href="team.html" aria-current="page">Team</a></li>
+          <li><a href="services.html">Service</a></li>
+          <li><a href="allprojects.html">Projects</a></li>
+          <li><a href="allevent.html">Events</a></li>
+          <li><a href="contact.html">Contacts</a></li>
+          <li><a href="donate.html">Donate</a></li>
+        </ul>
       </div>
     </div>
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
+     <a href="#">Bianco-Consonni</a>.
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
 
 </body>
