--- a/public/pages/association.html
+++ b/public/pages/association.html
@@ -202,16 +202,16 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <h6>Eco Vibes SA</h6>
-          <p class="text-justify">Eco Vibes SA, società fondata nel 1988 con sedi a Locarno e Lugano, è attiva nei campi delle consulenze ambientali e naturalistiche, dell’ingegneria forestale come pure della fisica ed energetica della costruzione.</p>
+          <p class="text-justify">Eco Vibes was founded by Father Barbieri on 15 April 1965 is active in the field of ambiental and natural consulence, forestal engineering and eneregetic of the construction.</p>
         </div>
 
         <div class="col-xs-6 col-md-3">
           <h6>Contatti sede Legale</h6>
           <ul class="footer-links">
-            <p>Via Rovedo 16 / CP464<br>
-                CH-6604 Locarno<br>
-                Tel. +41 91 290 12 00<br>
-            <a href="mailto:info@ecocontrol.ch">info@ecocontrol.ch</a></p>
+            <p>Viale Alessandro Carughi, 69<br>
+                Como<br>
+                Tel. +69 91 420 96 00<br>
+            <a href="mailto:info@ecocontrol.ch">info@ecovibes.org</a></p>
           </ul>
         </div>
 
@@ -222,7 +222,7 @@
             <li><a href="team.html" aria-current="page">Team</a></li>
             <li><a href="services.html">Service</a></li>
             <li><a href="allprojects.html">Projects</a></li>
-            <li><a href="http://scanfcode.com/sitemap/">Events</a></li>
+            <li><a href="allevent.html">Events</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="donate.html">Donate</a></li>
           </ul>
