--- a/public/pages/event.html
+++ b/public/pages/event.html
@@ -105,18 +105,10 @@
                 <div class="row" id="service-related">
                 </div>
             </div>
-        </div>    
-    
-        <!------------------------------------------------------- PROJECT RELATED -------------------------------------------------------------------->
- 
-        <div class="container-projects">
-        </div>
-        
+        </div>           
 
-        <!------------------------------------------------------- EVENT RELATED -------------------------------------------------------------------->
+        <!------------------------------------------------------- NEXT EVENT -------------------------------------------------------------------->
 
-         <div class="container-events">
-        </div>
         <div class="d-flex justify-content-between" id="buttons">            
         </div>
     </div>
