--- a/public/pages/team.html
+++ b/public/pages/team.html
@@ -88,7 +88,7 @@
 </header>
 <!-----------------------------------------------------------TEAM -------------------------------------------------------------------->
 
-<div class = "container">
+<div class = "container-team">
     <div class="col-md-12" >
         <div class="row">
             <div id="margin-team"class="col-lg-7">
