--- a/public/pages/singlePerson.html
+++ b/public/pages/singlePerson.html
@@ -113,6 +113,8 @@
           <p id="person_role"></p>
           <h5>Profession</h5>
           <p id="person_profession"></p>
+          <h5>Email</h5>
+          <p id="person_email"></p>
           <h5>Service</h5>
           <p id="person_service"></p>
           <h5>About me</h5>
